# fnproject-haskell

./: .gitignore  Dockerfile  README.md  func.yaml  haskell-hello.cabal
app/: Main.hs
