name:                haskell-hello
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-hello#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskell-hello
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5
    , extra >= 1.6.14 && < 2
    , network >= 2.6.3.6 && < 4
    , bytestring >= 0.10.8.2 && < 0.11
    , parsec >= 3.1.13.0 && < 4
    , json >= 0.9 && < 0.11
    , utf8-string >= 1.0.1.1 && < 2
    , http-types >= 0.12.2 && < 0.13
