name:                haskell-hello
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-hello#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskell-hello
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5
    , network >= 2.6.3.6 && < 4
    , binary >= 0.8.5.1 && < 0.9
    , aeson >= 1.3.1.1 && < 2
    , http-types >= 0.12.2 && < 0.13
    , text >= 1.2.3.1 && < 2
    , wai >= 3.2.1.2 && < 4
    , warp >= 3.2.25 && < 4
